Revision history for Toadfarm

0.03
       * Fix cannot pass MOJO_CONFIG to sub apps
       * Accept "log_file" from config

0.02     Mon Apr 29 21:36:48 2013
       * Add $VERSION
       * Add suppor for "plugins"
       * Will not poke into mojolicious internals

0.01     Mon Apr 29 20:28:14 2013
       * Toadfarm can dispatch based on headers