@@ -1,0 +1,4 @@
+export CONFIG="/etc/toadfarm/toadfarm.conf"
+export RUN_AS="www-user"
+export MOJO_LOG_LEVEL="debug";
+export MOJO_MODE="production";
