@@ -1,0 +1,28 @@
+tart on (filesystem and net-device-up IFACE=lo)
+stop on runlevel [!2345]
+
+kill timeout 30
+expect fork
+respawn
+
+pre-start script
+  LOG_FILE="/var/log/toadfarm.log";
+  PID_DIR="/var/run/toadfarm";
+  RUN_AS="www-user";
+  . /etc/default/toadfarm.env;
+
+  touch $LOG_FILE;
+  [ -d $PID_DIR ] || mkdir $PID_DIR;
+  chmod 750 $PID_DIR $LOG_FILE;
+  chown $RUN_AS $PID_DIR $LOG_FILE;
+  logger -is -t "$UPSTART_JOB" "toadfarm: Created $PID_DIR and $LOG_FILE";
+end script
+
+script
+  CONFIG="/etc/toadfarm/toadfarm.conf"
+  RUN_AS="www-user";
+  TOADFARM="/usr/local/bin/toadfarm";
+  . /etc/default/toadfarm.env;
+  logger -is -t "$UPSTART_JOB" "toadfarm: start-stop-daemon --start --chuid $RUN_AS --pidfile $PID_DIR/pid --exec $TOADFARM -- $CONFIG";
+  exec start-stop-daemon --start --chuid $RUN_AS --pidfile $PID_DIR/pid --exec $TOADFARM -- $CONFIG;
+end script
