@@ -1,0 +1,16 @@
+{
+  log => {
+    file => '/var/log/toadfarm.log',
+    combined => 1,
+  },
+  hypnotoad => {
+    listen => ['http://*:8080'],
+    pid_file => '/var/run/toadfarm/pid',
+  },
+  apps => [
+    '/home/web/some-project/script/some-project' => {
+      Host => 'mydomain.com',
+    },
+  ],
+}
+
