@@ -87,6 +87,14 @@ argument:
     # ...
   }
 
+=head1 EXAMPLE SETUP
+
+Look at L<https://github.com/jhthorsen/toadfarm/tree/etc/> for example
+resources which show how to start L<Toadfarm> on ubuntu. In addition, you can
+forward all traffic to the server using the "iptables" rule below:
+
+  $ iptables -A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
+
 =cut
 
 use Mojo::Base 'Mojolicious';
